src/eval/snapshots/monkey_language_server__eval__test__errors.snap
---
source: src/eval/test.rs
description: "\nlet foo = true - true;\n\nlet x = if (true) {\n    let b = 42;\n} else {\n    let a = b;\n};\nlet a = b;\n\nlet add = fn(x,y) {\n    return x + y;\n    let a = \"foo\";\n};\n\nlet ret = add(2);\n"
expression: "input_diagnostics(input, diags)"
---

let foo = true - true;
               ^ [Error] TypeError: <bool> - <bool>

let x = if (true) {
    let b = 42;
} else {
    let a = b;
            ^ [Error] NameError: 'b' is not defined.
};
let a = b;
        ^ [Error] NameError: 'b' is not defined.

let add = fn(x,y) {
    return x + y;
    let a = "foo";
    ^ [Warning] Code is unreachable
};

let ret = add(2);
             ^ [Error] TypeError: mismatched arg and param count. Expected 2, got 1.
